--- a/personal.htm
+++ b/personal.htm
@@ -104,8 +104,8 @@
 
                 </section>
                 <section class="col-md-4">
-                    <div class="text-center"><img src="img/personal-2.jpg" alt=""></div>
-                    <h5 class="text-center">Aydan Mammadova</h5>
+                    <div class="text-center"><img src="img/personal-3.jpg" alt=""></div>
+                    <h5 class="text-center">Elnur Mammadli</h5>
                     <span class="text-center primary d-block">Baş Aşpaz</span>
                     <p>Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla
                         mauris sit amet nibh. Donec sodales sagittis magna. Aenean commodo lig</p>
